--- a/mon_site_web/hello.html
+++ b/mon_site_web/hello.html
@@ -16,6 +16,9 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+		<div>
+			<p> moi ces benjamin etudiant a la formation git</p>
+		</div>
 		
 	
 </body></html>
