ajout des titres

--- a/mon_site_web/hello.html
+++ b/mon_site_web/hello.html
@@ -19,6 +19,14 @@
 		<div>
 			<p> moi ces benjamin etudiant a la formation git</p>
 		</div>
-		
-	
+		<!-- DESCRIPTION -->
+		<div >
+			<h1> Ma description</h1>
+			<p>Bonjour , je m'appele Benjamin etudiant de la frormation GIT</p>
+		</div>
+		<!-- RECOMPENCE -->
+		<div >
+			<h1> Ma recompence</h1>
+			<P> en construction....</P>
+		</div>
 </body></html>
