--- a/mon_site_web/hello.html
+++ b/mon_site_web/hello.html
@@ -32,7 +32,7 @@
 		<!-- mon gist -->
 		<div >
 			<h1> Mon gist</h1>
-			<P> script src="https://gist.github.com/100ben1000/8fe0298cd759a8cadad3d279738a5762.js"></script></P>
+			<P> <script src="https://gist.github.com/100ben1000/8fe0298cd759a8cadad3d279738a5762.js"></script></P>
 		</div>
-		<
+		
 </body></html>
